                                   __
                       _ __ ___   / _|  ___  _ __ ___
                      | '_ ` _ \ | |_  / _ \| '_ ` _ \
                      | | | | | ||  _||  __/| | | | | |
                      |_| |_| |_||_|   \___||_| |_| |_|

                               https://mfem.org


Version 4.5.1 (development)
===========================


Version 4.5, released on October 22, 2022
=========================================

Meshing improvements
--------------------
- Added new SubMesh and ParSubMesh classes that can be used to extract a subset
  of a given Mesh. These classes have the same functionality as Mesh and ParMesh
  and work with all existing MFEM interfaces like finite element spaces etc.

- Added a method, ParMesh::GetSerialMesh(), that reconstructs a partitioned
  parallel mesh on a given single rank. Also, added ParMesh::PrintAsSerial(),
  which saves the reconstructed serial mesh to a C++ stream on rank 0.

- Added more 3D TMOP metrics, as well as specialized metrics for mesh
  untangling and worst-case quality improvement.

- Added a new method, Mesh::NodesUpdated, which should be called after the mesh
  node coordinates have changed, e.g. after the mesh has moved. This is
  necessary, for example, with device assembly of linear and bilinear forms.

- Added support for mixed meshes and pyramids in GSLIB-FindPoints.

Discretization improvements
---------------------------
- Added full assembly and device support for several LinearForm integrators:
  * DomainLF: (f, v)
  * VectorDomainLF: ((f1,...,fn), (v1,...,vn))
  * DomainLFGrad: (f, grad(v))
  * VectorDomainLFGrad: ((f1x,f1y,f1z,...,fnx,fny,fnz), grad(v1,...,vn))
  The device assembly of linear forms has to be explicitly enabled by calling
  LinearForm::UseFastAssembly(true), otherwise the legacy linear form assembly
  is used by default.

- Added support for assembling low-order-refined matrices using a GPU-enabled